DASH-3384 [Frontend][Policy report] Implement policy report

--- a/src/components/components/appsco-list-behavior.html
+++ b/src/components/components/appsco-list-behavior.html
@@ -732,7 +732,7 @@
 
             if (itemList) {
                 this._hideMessage();
-                this._totalItems = meta.total ? meta.total : itemList.length;
+                this._totalItems = meta.total;
                 this._nextListPageApi = meta.next + '&limit=' + this.size;
 
                 if (0 === meta.total) {
