Added missing import

--- a/src/components/report/appsco-policy-report-roles.html
+++ b/src/components/report/appsco-policy-report-roles.html
@@ -8,6 +8,7 @@
 <link rel="import" href="appsco-policy-report-role-item.html">
 <link rel="import" href="../components/appsco-list-behavior.html">
 <link rel="import" href="../components/appsco-list-styles.html">
+<link rel="import" href="../components/appsco-list-observer-behavior.html">
 
 <dom-module id="appsco-policy-report-roles">
     <template>
