DASH-3507 [Frontend] Error after sharing resource on company resources page

--- a/src/components/application/appsco-application-analytics-security.html
+++ b/src/components/application/appsco-application-analytics-security.html
@@ -161,7 +161,7 @@ Custom property | Description | Default
             },
 
             _computeAssigness: function(application) {
-                return (application.security && (application.security.info.not_configured + application.security.info.configured) != 0);
+                return (application && application.security && (application.security.info.not_configured + application.security.info.configured) != 0);
             },
 
             _onApplicationChanged: function(application) {
